src/objects/IT_Group__c.object
<CustomObject>
    <fields>
        <fullName>IT_AC_User__c</fullName>
        <label>AC User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IT_Description__c</fullName>
        <label>Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Financial_Center_Code__c</fullName>
        <label>Financial Center Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Forcing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forcing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Group_Billing_Administrative_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group Billing Administrative Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Group_Code__c</fullName>
        <externalId>true</externalId>
        <label>Group Code</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Group_Type__c</fullName>
        <label>Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                    <label>CONVENZIONE</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>STESSO CLIENTE CON + PRODOTTI</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>GRUPPO STAT.COMMERCIALE</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>MERCHANT ECONOMIC CONDITIONS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Key_Group__c</fullName>
        <externalId>true</externalId>
        <label>Key Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Parent_Company_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent Company Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Parent_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Company</label>
        <referenceTo>ER_Financial_Center__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Service__c</fullName>
        <label>Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Validity_End_Date__c</fullName>
        <label>Validity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Validity_Start_Date__c</fullName>
        <label>Validity Start Date</label>
        <type>Date</type>
    </fields>
    <label>Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IT_Group_Code__c</columns>
        <columns>IT_Key_Group__c</columns>
        <columns>IT_Group_Type__c</columns>
        <columns>IT_Service__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VRIT01_Modify</fullName>
        <active>false</active>
        <errorConditionFormula>AND (
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &apos;IT&apos;),
NOT(
OR( 
ISPICKVAL(IT_Parent_Company__r.IT_Service__c , &apos;1B&apos;),
ISPICKVAL(IT_Parent_Company__r.IT_Service__c , &apos;1X&apos;),
ISPICKVAL(IT_Parent_Company__r.IT_Service__c , &apos;2X&apos;),
ISPICKVAL(IT_Parent_Company__r.IT_Service__c , &apos;0G&apos;),
ISPICKVAL( IT_Parent_Company__r.IT_Service__c , &apos;0F&apos;),
ISPICKVAL(IT_Parent_Company__r.IT_Service__c , &apos;0H&apos;),
ISPICKVAL( IT_Parent_Company__r.IT_Service__c , &apos;0P&apos;),
ISPICKVAL(IT_Parent_Company__r.IT_Service__c, &apos;0Q&apos;),
ISPICKVAL(IT_Parent_Company__r.IT_Service__c, &apos;1W&apos;),
ISPICKVAL(IT_Parent_Company__r.IT_Service__c, &apos;2F&apos;),
ISPICKVAL(IT_Parent_Company__r.IT_Service__c , &apos;2G&apos;),
ISPICKVAL(IT_Parent_Company__r.IT_Service__c, &apos;1D&apos;),
ISPICKVAL( IT_Parent_Company__r.IT_Service__c , &apos;1L&apos;),
ISPICKVAL( IT_Parent_Company__r.IT_Service__c , &apos;1M&apos;),
ISPICKVAL( IT_Parent_Company__r.IT_Service__c , &apos;1N&apos;),
ISPICKVAL(IT_Parent_Company__r.IT_Service__c , &apos;1O&apos;),
ISPICKVAL(IT_Parent_Company__r.IT_Service__c , &apos;1E&apos;),
ISPICKVAL(IT_Parent_Company__r.IT_Service__c, &apos;1Y&apos;),
ISPICKVAL(IT_Parent_Company__r.IT_Service__c, &apos;1H&apos;),
ISPICKVAL(IT_Parent_Company__r.IT_Service__c , &apos;2J&apos;),
ISPICKVAL(IT_Parent_Company__r.IT_Service__c , &apos;2X&apos;)/*,
AND(
NOT(ISBLANK( IT_Parent_Company__r.IT_DEMO_Financial_Center__c  )),
ISPICKVAL(IT_Parent_Company__r.IT_Service__c, &apos;1B&apos;)
)*/
)
))</errorConditionFormula>
        <errorMessage>Impossible to modify for this type of service</errorMessage>
    </validationRules>
</CustomObject>